crates/pg_syntax/tests/snapshots/postgres_regress/money@36.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT cashsmaller(m, '$124.00') FROM money_data;"
---
SelectStmt@0..49
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..31
    FuncCall@7..31
      Ident@7..18 "cashsmaller"
      Ascii40@18..19 "("
      ColumnRef@19..20
        Ident@19..20 "m"
      Ascii44@20..21 ","
      Whitespace@21..22 " "
      AConst@22..31
        Sconst@22..31 "'$124.00'"
  Ascii41@31..32 ")"
  Whitespace@32..33 " "
  From@33..37 "FROM"
  Whitespace@37..38 " "
  RangeVar@38..48
    Ident@38..48 "money_data"
  Ascii59@48..49 ";"

