crates/pg_syntax/tests/snapshots/postgres_regress/money@37.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT cash_words(m) FROM money_data;
---
SelectStmt@0..37
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..19
    FuncCall@7..19
      Ident@7..17 "cash_words"
      Ascii40@17..18 "("
      ColumnRef@18..19
        Ident@18..19 "m"
  Ascii41@19..20 ")"
  Whitespace@20..21 " "
  From@21..25 "FROM"
  Whitespace@25..26 " "
  RangeVar@26..36
    Ident@26..36 "money_data"
  Ascii59@36..37 ";"

